--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@ License: GNU General Public License
 License URI: https://www.gnu.org/licenses/gpl.html
 Tags: one-column, two-columns, custom-menu, featured-images, microformats, sticky-post, threaded-comments, translation-ready
 Text Domain: illdy-clone
-
+Template: Blankslate
 Illdy-clone WordPress Theme © 2011-2019 TidyThemes
 Illdy-clone is distributed under the terms of the GNU GPL
 */
